--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postbuild": "next-on-netlify",
     "deploy:static": "next build && next export"
   },
   "dependencies": {
     "disqus-react": "^1.1.2",
     "next": "11.1.0",
+    "next-on-netlify": "^3.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
