--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy:static": "next build && next export"
+    "deploy:static": "next build && next export",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^3.9.0",
@@ -20,7 +22,11 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "@next/eslint-plugin-next": "^11.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.2",
     "@types/react": "^17.0.19",
     "@types/styled-components": "^5.1.13",
@@ -33,6 +39,8 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.1.1",
+    "jest-styled-components": "^7.0.5",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   }
